tests/negative/import_missing_symbol.far
import fixtures.exp_a { alpha, missing_sym_xyz }

fun main() -> i64 {
  return alpha()
}
